--- a/FRONTEND/tp04/src/app/addresses/addresses.component.html
+++ b/FRONTEND/tp04/src/app/addresses/addresses.component.html
@@ -13,6 +13,7 @@
         <label><b>Pays:</b> {{postalAddress.country}}</label>
     </div>
 </div>
+<h4 *ngIf="!(postalAddress$ | async)">Aucune adresse postale sélectionnée</h4>
 <br><br>
 <h3>Adresse de facturation</h3>
 <div class="form-row" id="billingAddress" *ngIf="billingAddress$ | async as billingAddress">
@@ -37,7 +38,7 @@
         <div class="form-group col-md-4">
             <label><b>Adresse:</b> {{a.address}}</label>
         </div>
-        <div class="form-group col-md-4">
+        <div class="form-group col-md-2">
             <label><b>Ville:</b> {{a.city}}</label>
         </div>
         <div class="form-group col-md-2">
@@ -48,6 +49,34 @@
         </div>
         <button (click)="setPostalAddress(a)">Définir comme adresse postale</button>
         <button (click)="setBillingAddress(a)">Définir comme adresse de facturation</button>
+        <button (click)="removeAddress(a)">Supprimer</button>
     </li>
 </ul>
-<button>Ajouter une nouvelle adresse</button>
+<button (click)="newAddress = !newAddress">Ajouter une nouvelle adresse</button>
+
+<div class="form-row" *ngIf="newAddress">
+    <div class="form-group col-md-4">
+        <label for="address">Adresse</label>
+        <input type="text" class="form-control" [(ngModel)]="address" placeholder="Entrez votre adresse">
+    </div>
+    <div class="form-group col-md-4">
+        <label for="city">Ville</label>
+        <input type="text" class="form-control" [(ngModel)]="city" placeholder="Entrez votre ville">
+    </div>
+    <div class="form-group col-md-2">
+        <label for="zip">Code postal</label>
+        <input type="text" class="form-control" [(ngModel)]="zip" placeholder="Entrez votre code postal">
+    </div>
+    <div class="form-group col-md-2">
+        <label for="country">Pays</label>
+        <select class="form-control" [(ngModel)]="country">
+            <option>France</option>
+            <option>Royaume-Uni</option>
+            <option>Etats-Unis</option>
+            <option>Allemagne</option>
+        </select>
+        <div *ngIf="!country" class="alert-div" >Merci de saisir un pays.</div>
+    </div>
+    <button (click)="addAddress()">Valider</button>
+    <button (click)="newAddress = !newAddress">Annuler</button>
+</div>
