--- a/FRONTEND/tp04/src/app/products-list/products-list.component.html
+++ b/FRONTEND/tp04/src/app/products-list/products-list.component.html
@@ -1,10 +1,13 @@
 <ul *ngFor="let p of productsList$ | async">
     <li>
         <div>
-            Product <b>{{ p.ref }}</b>: <b>{{p.label}}</b>. Price: <b>{{ p.price }}</b>.
+            <b>{{p.label}}</b>: <b>{{ p.price }}€</b>.
         </div>
-        <button (click)="addProduct(p)">Add to basket</button>
+        <button (click)="addProduct(p)">Ajouter au panier</button>
+        <button (click)="seeDetails(p)">Voir les détails</button>
     </li>
 </ul>
+
+<app-product-details [(product)]="detailedProduct" *ngIf="detailedProduct"></app-product-details>
 
 
